link to css file

--- a/style.css
+++ b/style.css
@@ -2,10 +2,9 @@
 /* here we set default font size to 14px 
  NOTE: this will probably change, just trying to set up a basic 
  framwork ie: wireframe*/
- 
- .splash-section {
+ p {
     font-size: 14px;
-    font-family: Playfair Display;
+    font-family: "Playfair Display";
 }
 
 /* suject to change
