--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 /* here we set default font size to 14px 
  NOTE: this will probably change, just trying to set up a basic 
  framwork ie: wireframe*/
- p {
-    font-size: 14px;
+ html {
+    font-family: 'Roboto', 'light';
 }
 
 /* suject to change
