--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 
-/* here we set default font size to 14px 
- NOTE: this will probably change, just trying to set up a basic 
- framwork ie: wireframe*/
+
+/* Universal Styles */
+
  html {
+    font-size: 16px;
     font-family: 'Roboto', 'light';
 }
 
-/* suject to change
-here we set h1 font size based on the relative 
-size already determined in .splash-section */
+body {
+    background-color: white;
 
-.splash-section para {
-    font-size: 1.5em;
 }
+
+
+
+
