added css comments

--- a/style.css
+++ b/style.css
@@ -13,5 +13,53 @@ body {
 }
 
 
+/* Header Styles Christina*/
 
 
+
+
+
+
+
+
+/* Second part sect1 logo + our story + button Christina*/
+
+
+
+
+
+
+
+/* third part : link to video and h3 Tania */
+
+
+
+
+
+
+
+/* fourth part : our expertise with the grid system Tania */
+
+
+
+
+
+
+
+/* fifth part : our teams with flex Christina */
+
+
+
+
+
+
+
+/* Sixth part : form and logos Tania */
+
+
+
+
+
+
+
+/* Footer Christina */
