--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 
  html {
     font-size: 16px;
-    /* font-family: 'Roboto', 'light'; */
 }
 
 body {
@@ -16,34 +15,98 @@ body {
 /* Header Styles Christina*/
 header {
     background-image: url(/images/bgk-header.png);
+    width: auto;
+    height: 600px;
 }
 
 .top__nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 10rem;
     align-items: center;
-    padding: 1rem 2rem;
 }
 
 .logo1left {
     display: flex;
     align-items: center;
-    margin-right: 1rem;
+    justify-content: center;
+    gap: 0.5rem;
 }
 
 .logo1left p {
     font-family: 'Roboto', 'light';
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     font-weight: 100;
-    letter-spacing: -0.1rem;
     color: #1d7b8a;
 }
 
 .img__left {
-    width: 2rem;
-    height: 2rem;
+    width: 2.2rem;
+    height: 2.5rem;
 }
 
+.navbar__right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    list-style-type: none;
+}
+
+.navbar__right a {
+    text-decoration: none;
+    color: white;
+    font-size: 0.7rem;
+    font-weight: 800;
+    font-family: "roboto", "black";
+}
+
+.navbar__right a:visited {
+    color: rgb(127, 127, 127);
+}
+
+.navbar__right a:active {
+    color: #1d7b8a;
+}
+
+.navbar__right a:hover {
+    color: #1d7b8a;
+}
+
+.header__parabut { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 5rem;
+}
+
+.header__h1 {
+    font-family: 'PlayfairDisplay', 'black';
+    font-size: 2rem;
+    font-weight: 900;
+    color: white;
+}
+
+.header__para {
+    font-family: "roboto", "light";
+    font-size: 0.8rem;
+    color: white;
+    width: 60%;
+    line-height: 160%;
+}
+
+.header__button {
+    background-color: transparent;
+    color: #3cc3d8;
+    border: 1.5px #3cc3d8 solid;
+    padding: 0.5rem 1rem;
+    font-family: "roboto", "black";
+    font-size: 0.8rem;
+    font-weight: 800;
+    cursor: pointer;
+}
 
 
 
