small changes to expert__icon div

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ header {
 }
 
 
-/* fourth part : our expertise with the grid system Tania */
+/* fourth part : our expertise  Tania */
 
 .expert {
     height: 753px;
