changes to divs

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ hr {
 
 /* fourth part : our expertise  Tania */
 
-.expert {
+.expert_div {
     height: 753px;
     width: 1600px;
     margin: auto;
@@ -190,7 +190,13 @@ hr {
     color: black;
 }
 
+/* expert icon container */
 
+.icon_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
 
 /* fifth part : our teams with flex Christina */
