--- a/style.css
+++ b/style.css
@@ -587,6 +587,9 @@ flex-basis: 33%;
     .flexfooter1, .flexfooter2, .flexfooter3 {
         width: 100%;
     }
+    .navbar__right li {
+        width: 100%;
+    }
 }
 
 
@@ -600,6 +603,9 @@ flex-basis: 33%;
         flex-direction: column;
     }
     .flexfooter1, .flexfooter2, .flexfooter3 {
+        width: 100%;
+    }
+    .navbar__right li {
         width: 100%;
     }
 }
