--- a/style.css
+++ b/style.css
@@ -577,14 +577,14 @@ flex-basis: 33%;
 /* PUT IT HERE */
 
 @media only screen and (max-width: 768px) {
-    /* For table: */
+    /* For tablet: */
     .icon_container {
         grid-template-columns: auto auto;
     }
-    .flexfooter {
+    .flexfooter, .navbar__right, .flex-cont1 {
         flex-direction: column;
     }
-    .flexfooter1, .flexfooter2, .flexfooter3 {
+    .flexfooter1, .flexfooter2, .flexfooter3, .flex-item1, .flex-item2 {
         width: 100%;
     }
     .navbar__right li {
@@ -598,11 +598,10 @@ flex-basis: 33%;
     .icon_container {
         grid-template-columns: auto;
     }
-
-    .flexfooter {
+    .flexfooter, .navbar__right, .flex-cont1 {
         flex-direction: column;
     }
-    .flexfooter1, .flexfooter2, .flexfooter3 {
+    .flexfooter1, .flexfooter2, .flexfooter3, .flex-item1, .flex-item2 {
         width: 100%;
     }
     .navbar__right li {
