--- a/style.css
+++ b/style.css
@@ -755,6 +755,16 @@ flex-basis: 33%;
 
 @media only screen and (max-width: 600px) {
     /* For phone: */
+
+    .flex-item2__para{
+        text-align: center;
+    }
+    .flex-item2__button{
+        margin-left: 5rem;
+    }
+
+
+
     .icon_container {
         grid-template-columns: auto;
     }
@@ -771,6 +781,7 @@ flex-basis: 33%;
     .web {
         padding: 1rem;
     }
+
 
 
     .brandsnews {
