--- a/style.css
+++ b/style.css
@@ -840,6 +840,29 @@ flex-basis: 33%;
        font-size: 0.5rem;
   }
 
+  
+  .form_logos .brandsnews {
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.form_logos .form {
+    width: 100%;
+}
+
+.form_logos .grid2 {
+    grid-template-columns: auto auto;
+}
+
+.form_logos .imgb {
+    width: 30px;
+    height: 10px;
+}
+
+.form_logos .submit {
+    width: 100px;
+}
 
     /* .flexfooter, .navbar__right, .flex-cont1 {
         flex-direction: column;
